fix: adding temp workaround to treat classless <p> tags as text components to fix minor spacing issues; workaround for button hover color being off; adding option to set vertical alignment of inline lists

--- a/src/_patterns/01-core/05-objects/bolt-inline-list-object/src/inline-list.scss
+++ b/src/_patterns/01-core/05-objects/bolt-inline-list-object/src/inline-list.scss
@@ -26,10 +26,26 @@ bolt-inline-list {
   display: block;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+
+.o-bolt-inline-list--valign-top {
+  vertical-align: top;
+  align-items: flex-start;
+}
+
+//Vertical (middle) alignment
+.o-bolt-inline-list--valign-center {
+  vertical-align: middle;
+  align-items: center;
+}
+
+.o-bolt-inline-list--valign-bottom {
+  vertical-align: bottom;
+  align-items: flex-end;
 }
 
 // .o-bolt-inline-list--matrix {
