--- a/src/_patterns/02-components/bolt-action-blocks/demo/theming/action-blocks--theme-demo.twig
+++ b/src/_patterns/02-components/bolt-action-blocks/demo/theming/action-blocks--theme-demo.twig
@@ -4,8 +4,10 @@
     "theme": theme,
     "contentItems": [
       {
-        "text": "Item 1, Proin Quis Tortor Orci Etiam At Risus Et Justo Dignissim.",
-        "url": "http://google.com",
+        "actionBlock": {
+          "text": "Item 1, Proin Quis Tortor Orci Etiam At Risus Et Justo Dignissim.",
+          "url": "http://google.com"
+        },
         "icon": {
           "name": "download",
           "size": "large",
@@ -13,8 +15,10 @@
         }
       },
       {
-        "text": "Item 2",
-        "url": "http://google.com",
+        "actionBlock": {
+          "text": "Item 2",
+          "url": "http://google.com"
+        },
         "icon": {
           "name": "calendar",
           "size": "large",
@@ -22,8 +26,10 @@
         }
       },
       {
-        "text": "Item 3",
-        "url": "http://google.com",
+        "actionBlock": {
+          "text": "Item 3",
+          "url": "http://google.com"
+        },
         "icon": {
           "name": "copy-to-clipboard",
           "size": "large",
@@ -31,8 +37,10 @@
         }
       },
       {
-        "text": "Item 4",
-        "url": "http://google.com",
+        "actionBlock": {
+          "text": "Item 4",
+          "url": "http://google.com"
+        },
         "icon": {
           "name": "copy-to-clipboard",
           "size": "large",
@@ -40,8 +48,10 @@
         }
       },
       {
-        "text": "Item 5",
-        "url": "http://google.com",
+        "actionBlock": {
+          "text": "Item 5",
+          "url": "http://google.com"
+        },
         "icon": {
           "name": "copy-to-clipboard",
           "size": "large",
@@ -49,8 +59,10 @@
         }
       },
       {
-        "text": "Item 6",
-        "url": "http://google.com",
+        "actionBlock": {
+          "text": "Item 6",
+          "url": "http://google.com"
+        },
         "icon": {
           "name": "calendar",
           "size": "large",
