--- a/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.twig
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.twig
@@ -1,7 +1,7 @@
 {# Sample Usage
   {% include "@bolt/action-blocks.twig" with {
     maxItemsPerRow: 3,  // Optional [2 ~ 12]. Default is 3.
-    align: "top",       // Optional [top, center, bottom]. Default is top.
+    valignItems: "top",       // Optional [top, center, bottom]. Default is top.
     border: true,       // Optional [show, hide]. Default shows borders, but you can turn them off.
     contentItems: [
       {
@@ -42,12 +42,6 @@
 {% set maxItems = 12 %}
 {% set defaultItems = 6 %}
 
-{% set alignments = {
-  "top": "start",
-  "center": "center",
-  "bottom": "end"
-} %}
-
 {% set attributes = create_attribute(attributes|default({})) %}
 
 
@@ -56,14 +50,13 @@
 {% set componentItemName = "action-block" %}
 {% set itemClass = prefix ~ componentItemName %}
 {% set maxItemsPerRow = maxItemsPerRow >= minItems and maxItemsPerRow <= maxItems ? maxItemsPerRow : defaultItems %}
-{% set align = align | default("top") %}
+{% set valignItems = valignItems | default("top") %}
 {% set border = border == false and border is not null ? "false" : "true" %}
 
 
 {% set classes = [
   baseClass,
   maxItemsPerRow ? baseClass ~ "--item-max-" ~ maxItemsPerRow : "",
-  align in alignments|keys ? baseClass ~ "--vertical-align-" ~ alignments[align],
   border == "true" ? baseClass ~ "--bordered" : baseClass ~ "--borderless"
 ] %}
 
@@ -75,7 +68,9 @@
     {% else %}
       {% for item in contentItems %}
         <li class="{{ "#{baseClass}__item" }}">
-          {% include "@bolt/action-block.twig" with item only %}
+          {% include "@bolt/action-block.twig" with item | merge({
+            "valignItems": actionBlocks.valignItems
+          }) only %}
         </li>
       {% endfor %}
     {% endif %}
