--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -41,64 +41,99 @@
 
 
 // Local Variables
-$bolt-blockquote-border-width: 0.25rem;
+$bolt-blockquote-border-width: 2px;
 $bolt-blockquote-border-style: $bolt-border-style;
 $bolt-blockquote-border-color: bolt-color(teal);
 $bolt-blockquote-footer-line-height: $bolt-line-height--tight;
 
 
 // Styles
+c-bolt-blockquote {
+  @include bolt-margin-bottom(medium);
+  display: block;
+}
+
 .c-bolt-blockquote {
+  @include bolt-margin(0);
   color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
-}
 
-.c-bolt-blockquote--align-start {
-  text-align: left;
-}
-
-.c-bolt-blockquote--align-center {
-  text-align: center;
-}
-
-.c-bolt-blockquote--align-end {
-  text-align: right;
-}
-
-.c-bolt-blockquote--bordered-side {
-  @include bolt-padding(0 medium);
-  border-left-width: $bolt-blockquote-border-width;
-  border-left-style: $bolt-blockquote-border-style;
-  border-left-color: $bolt-blockquote-border-color;
-}
-
-.c-bolt-blockquote--bordered-top {
-  &:before {
-    @include bolt-margin-bottom(medium);
-    display: inline-block;
-    display: inline-flex;
-    width: 6rem;
-    max-width: 100%;
+  &:before, &:after {
+    width: 100%;
+    max-width: 300px;
     height: $bolt-blockquote-border-width;
     content: '';
     vertical-align: top;
     background-color: $bolt-blockquote-border-color;
   }
+
+  &:before {
+    @include bolt-margin-bottom(medium);
+  }
+
+  &:after {
+    @include bolt-margin-top(medium);
+  }
+}
+
+.c-bolt-blockquote--align-items-start {
+  text-align: left;
+
+  .c-bolt-blockquote__quote {
+    @include bolt-margin-right(auto);
+    @include bolt-margin-left(0);
+  }
+}
+
+.c-bolt-blockquote--align-items-center {
+  text-align: center;
+
+  .c-bolt-blockquote__quote {
+    @include bolt-margin-right(auto);
+    @include bolt-margin-left(auto);
+  }
+}
+
+.c-bolt-blockquote--align-items-end {
+  text-align: right;
+
+  .c-bolt-blockquote__quote {
+    @include bolt-margin-right(0);
+    @include bolt-margin-left(auto);
+  }
+}
+
+.c-bolt-blockquote--bordered {
+  &:before, &:after {
+    display: inline-block;
+    display: inline-flex;
+  }
+}
+
+.c-bolt-blockquote--borderless {
+  &:before, &:after {
+    display: none;
+  }
 }
 
 .c-bolt-blockquote__quote {
   @include bolt-margin-bottom(medium);
-
   display: block;
   position: relative;
+  max-width: 75ch;
+  font-family: 'Georgia', serif; // TODO: Replace with Noto Serif when it is added.
 
-  p:first-child:before{
+  p:first-child:before, p:last-child:after {
     position: absolute;
+  }
+
+  p:first-child:before {
     content: '\201C';
     transform: translate3d(-110%, 0 ,0);
   }
 
   p:last-child:after {
     content: '\201D';
+    transform: translate3d(10%, 0 ,0);
   }
 }
 
