--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.twig
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.twig
@@ -1,5 +1,5 @@
 {# Sample Usage
-  {% include "@bolt/blockquote.twig" with {
+  {% include "@bolt/twig" with {
     author: {
       name: "Full Name",
       title: "Title and/or organization"
@@ -11,12 +11,7 @@
 
 {% set prefix = "c-bolt-" %}
 
-{% set borderOptions = {
-  "top": "top",
-  "left": "side"
-} %}
-
-{% set alignments = {
+{% set alignItemsOptions = {
   "left": "start",
   "center": "center",
   "right": "end"
@@ -27,14 +22,14 @@
 
 {% set componentName = "blockquote" %}
 {% set baseClass = prefix ~ componentName %}
-{% set align = align | default("left") %}
-{% set border = border %}
+{% set alignItems = alignItems | default("center") %}
+{% set border = border == false and border is not null ? "false" : "true" %}
 
 
 {% set classes = [
   baseClass,
-  align in alignments|keys ? baseClass ~ "--align-" ~ alignments[align],
-  border in borderOptions|keys ? baseClass ~ "--bordered-" ~ borderOptions[border] : ""
+  alignItems in alignItemsOptions|keys ? baseClass ~ "--align-items-" ~ alignItemsOptions[alignItems],
+  border == "true" ? baseClass ~ "--bordered" : baseClass ~ "--borderless"
 ] %}
 
 <bolt-{{ componentName }} bolt-component>
@@ -45,8 +40,7 @@
           {% include "@bolt/text.twig" with {
             text: content,
             tag: "div",
-            size: "large",
-            weight: "semibold"
+            size: "xlarge"
           } only %}
         {% endif %}
       {% endblock %}
@@ -58,17 +52,16 @@
             {% include "@bolt/text.twig" with {
               text: author.name,
               tag: "cite",
-              size: "xsmall",
-              weight: "semibold"
+              size: "small",
+              weight: "bold"
             } only %}
           </div>
           {% if author.title %}
             <div class="{{ "#{baseClass}__footer-item" }}">
               {% include "@bolt/text.twig" with {
                 text: author.title,
-                tag: "em",
-                size: "xsmall",
-                style: "italic"
+                tag: "span",
+                size: "xsmall"
               } only %}
             </div>
           {% endif %}
