--- a/src/_patterns/02-components/bolt-unordered-list/src/unordered-list.scss
+++ b/src/_patterns/02-components/bolt-unordered-list/src/unordered-list.scss
@@ -28,7 +28,7 @@
 
 // Local Variables
 $bolt-unordered-list-bullet-size: 8px; // Using px here because I need to make a perfect circle without subpixel issues.
-$bolt-unordered-list-bullet-bg-color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
+$bolt-unordered-list-bullet-bg-color: var(--bolt-theme-heading, currentColor); // TODO: refactor this after theming is done.
 
 
 // Register Custom Block Element
@@ -58,6 +58,7 @@ $bolt-unordered-list-bullet-bg-color: var(--bolt-color-heading, bolt-color(indig
     height: $bolt-unordered-list-bullet-size;
     content: '';
     border-radius: $bolt-unordered-list-bullet-size;
+    background-color: currentColor;
     background-color: $bolt-unordered-list-bullet-bg-color;
     line-height: $bolt-unordered-list-bullet-size;
   }
