--- a/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
@@ -102,15 +102,28 @@ bolt-action-blocks {
   flex-grow: 1;
   position: relative;
   min-width: 150px;
+}
+
+.c-bolt-action-blocks--bordered > .c-bolt-action-blocks__item:before {
   border-bottom-width: $bolt-action-blocks-border-width;
   border-bottom-style: $bolt-action-blocks-border-style;
   border-right-width: $bolt-action-blocks-border-width;
   border-right-style: $bolt-action-blocks-border-style;
-}
-
-.c-bolt-action-blocks--bordered > .c-bolt-action-blocks__item {
+  display: block;
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: '';
+  opacity: $bolt-global-border-opacity;
   border-bottom-color: $bolt-action-blocks-border-color;
   border-right-color: $bolt-action-blocks-border-color;
+
+  @supports(--css: variables) {
+    opacity: 1; // Remove fallback opacity and let theme decide.
+  }
 }
 
 .c-bolt-action-blocks--borderless > .c-bolt-action-blocks__item {
