WIP: adding vertical border option

--- a/src/_patterns/02-components/bolt-blockquote/demo/theming/blockquote--theme-demo.twig
+++ b/src/_patterns/02-components/bolt-blockquote/demo/theming/blockquote--theme-demo.twig
@@ -2,6 +2,9 @@
 {% block demo_content %}
   {% include "@bolt/blockquote.twig" with {
     "theme": theme,
+    "size": "xlarge",
+    "border": "horizontal",
+    "alignItems": "center",
     "author": {
       "name": "Michelangelo di Lodovico Buonarroti Simoni",
       "title": "Renaissance Artist"
