--- a/src/styles/bolt.scss
+++ b/src/styles/bolt.scss
@@ -70,6 +70,16 @@ bolt-demo {
 
 
 
+/*
+ * SHAME
+ */
+
+// Workaround Brightcove Video Player's Hapyak CSS in a ratio component
+bolt-ratio .hapyak-player:not(.hapyak-minimal-css) {
+  position: absolute !important;
+}
+
+
 
 // // color map
 // $color: (
