--- a/src/_patterns/02-components/bolt-card/src/card.scss
+++ b/src/_patterns/02-components/bolt-card/src/card.scss
@@ -58,7 +58,7 @@ bolt-card {
   color: bolt-color(gray, xdark); // Default card text color if no css var support
 
   @supports(--css: variables) {
-    background-color: var(--bolt-theme-border, rgba(bolt-color(white), 0.9));
+    background-color: rgba(bolt-color(white), 0.2);
     color: var(--bolt-theme-text, bolt-color(gray, xdark));
   }
 
